# phenotype-teamcomm

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  WORKLOG.md  audit_scorecard.json  deny.toml  justfile  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-attestation.yml
configs/: README.md  teamcomm-daemon.service
configs/claude/: claude_session_end.sh  claude_session_start.sh
configs/codex/: codex_session_end.sh  codex_session_start.sh
configs/copilot/: copilot_session_end.sh  copilot_session_start.sh
configs/forge/: forge_session_end.sh  forge_session_start.sh
crates/teamcomm-cli/: Cargo.toml
crates/teamcomm-cli/src/: cmd_daemon.rs  cmd_discover.rs  cmd_inbox.rs  cmd_reservations.rs  cmd_sessions.rs  cmd_state.rs  connect.rs  main.rs  output.rs  rpc.rs
crates/teamcomm-client/: Cargo.toml
crates/teamcomm-client/src/: lib.rs
crates/teamcomm-daemon/: Cargo.toml
crates/teamcomm-daemon/src/: config.rs  conflict.rs  db.rs  error.rs  handlers.rs  lib.rs  listener.rs  main.rs  pid.rs  state.rs
crates/teamcomm-daemon/tests/: daemon_e2e.rs  integration.rs  reservations_m2.rs
crates/teamcomm-mcp/: Cargo.toml
crates/teamcomm-mcp/mcp/: manifest.json
crates/teamcomm-mcp/src/: dispatch.rs  handlers.rs  lib.rs  main.rs  manifest.rs
crates/teamcomm-mcp/tests/: dispatch.rs  manifest.rs
crates/teamcomm-protocol/: Cargo.toml
crates/teamcomm-protocol/src/: conflict.rs  discovery.rs  error.rs  hook_event.rs  inbox.rs  lib.rs  path_pattern.rs  reservation.rs  rpc.rs  session.rs  state.rs  thread.rs
crates/teamcomm-smoke/: Cargo.toml
crates/teamcomm-smoke/src/: main.rs
docs/: M1-partial-2026-07-17.md  SDD.md  index.md
docs/disposition/: w18b-fleet-manifest.md
docs/security/: THREAT_MODEL.md
schemas/: README.md  discover.schema.json  errors.schema.json  inbox.schema.json  jsonrpc-envelope.schema.json  reservation.schema.json  session.schema.json  state.schema.json  teamcomm.schema.json
