[workspace]
resolver = "2"
members = [
    "crates/teamcomm-protocol",
    "crates/teamcomm-client",
    "crates/teamcomm-daemon",
    "crates/teamcomm-cli",
    "crates/teamcomm-mcp",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/KooshaPari/phenotype-teamcomm"
authors = ["kooshapari"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
async-trait = "0.1"
comfy-table = "7"
tempfile = "3"
thiserror = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
