[package]
name = "teamcomm-cli"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-teamcomm"
description = "teamcomm cli — Phenotype infrastructure crate (phenotype-teamcomm)"
documentation = "https://docs.rs/teamcomm-cli"
keywords = ["phenotype", "teamcomm", "teamcomm"]
categories = ["network-programming", "command-line-utilities"]
authors = ["kooshapari"]

[[bin]]
name = "teamcomm"
path = "src/main.rs"

[dependencies]
teamcomm-protocol = { path = "../teamcomm-protocol" }
teamcomm-client = { path = "../teamcomm-client" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
anyhow = { workspace = true }
comfy-table = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
