[package]
name = "teamcomm-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
teamcomm-protocol = { path = "../teamcomm-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
