[package]
name = "teamcomm-client"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-teamcomm"
description = "teamcomm client — Phenotype infrastructure crate (phenotype-teamcomm)"
documentation = "https://docs.rs/teamcomm-client"
keywords = ["phenotype", "teamcomm", "teamcomm"]
categories = ["network-programming", "command-line-utilities"]
authors = ["kooshapari"]

[dependencies]
teamcomm-protocol = { path = "../teamcomm-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
