[package]
name = "teamcomm-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "teamcomm MCP server — exposes coordination primitives as MCP tools"

[lib]
name = "teamcomm_mcp"
path = "src/lib.rs"

[[bin]]
name = "teamcomm-mcp"
path = "src/main.rs"

[dependencies]
teamcomm-protocol = { path = "../teamcomm-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
