[package]
name = "teamcomm-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "teamcomm protocol — wire types for inter-agent coordination"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
