[package]
name = "teamcomm-smoke"
version = "0.1.0"
edition = "2021"
description = "Smoke harness for the teamcomm daemon — brings up daemon, exercises wire methods, shuts down"

[dependencies]
teamcomm-daemon = { path = "../teamcomm-daemon" }
teamcomm-protocol = { path = "../teamcomm-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
